# fairytale-ai-server

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  prompt.txt  pyproject.toml  test.py
fairytale_ai_server/: db.sqlite3  entrypoint.sh  manage.py
fairytale_ai_server/accounts/: api.py  models.py  serializer.py  urls.py
fairytale_ai_server/accounts/migrations/: 0001_initial.py
fairytale_ai_server/fairytale_ai_server/: asgi.py  settings.py  urls.py  wsgi.py
